# spr-contracts

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ROUTING_ALGORITHM.md  SECURITY.md
src/: errors.rs  events.rs  lib.rs  liquidity.rs  path.rs  router.rs  types.rs
tests/: integration_test.rs
