[package]
name = "spr-contracts"
version = "0.1.0"
edition = "2021"

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.0"

[dev-dependencies]
soroban-sdk = { version = "20.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
